--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -5,14 +5,7 @@
             "type": "chrome",
             "request": "launch",
             "name": "Launch Chrome against localhost",
-            "url": "http://localhost:8080",
-            "webRoot": "${workspaceRoot}"
-        },
-        {
-            "type": "chrome",
-            "request": "attach",
-            "name": "Attach to Chrome",
-            "port": 9222,
+            "url": "https://kirby10023.github.io/DawnLeeSite/",
             "webRoot": "${workspaceRoot}"
         },
         {
